--- a/Pluralsight.ObjectOrientedProgramming/ACM/Tests/Acme.CommonTest/Acme.CommonTest.csproj
+++ b/Pluralsight.ObjectOrientedProgramming/ACM/Tests/Acme.CommonTest/Acme.CommonTest.csproj
@@ -51,15 +51,23 @@
   <ItemGroup>
     <Compile Include="StringHandlerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="LoggingServiceTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\ACM.BL\ACM.BL.csproj">
+      <Project>{347f36e5-fab1-4df9-804d-96cb73a482e3}</Project>
+      <Name>ACM.BL</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Acme.Common\Acme.Common.csproj">
       <Project>{a4cfa988-7a9f-46bf-9f94-e7215920a3e0}</Project>
       <Name>Acme.Common</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
